Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7931

QML Reformat File removes signal parameters

XMLWordPrintable

    • 880ab20751a911887aa5651ce717069dd6d8e5d4

      A signal defined in a QML file as follows:

      signal mySignal(bool enabled)

      gets converted to the following after Reformat File is run:

      signal mySignal //the parameter is removed. This results in dependent QML failing.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thohartm Thomas Hartmann
            miketrahearn Mike Trahearn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes