src/libs/qmljs/parser/qmljsast_p.h
@@ -2390,7 +2390,7 @@ public:
         previous->next = this;
     }
 
-    virtual void accept0(Visitor *) {}
+    virtual void accept0(Visitor *);
 
     virtual SourceLocation firstSourceLocation() const
     { return propertyTypeToken; }
