src/libs/qmljs/parser/qmljsastfwd_p.h
@@ -156,6 +156,7 @@ class UiProgram;
 class UiImportList;
 class UiImport;
 class UiPublicMember;
+class UiParameterList;
 class UiObjectDefinition;
 class UiObjectInitializer;
 class UiObjectBinding;
